Avance Exportación BackupsUser V1

--- a/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.html
+++ b/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.html
@@ -1,6 +1,6 @@
 <div class="tamaño-titulo-encabezado">
   <div class="tam-titulo-encabezado">
-    <h2 class="text-light">{{userService.User.email}}</h2>
+    <h3 class="font-weight-normal text-light">{{userService.User.email}}</h3>
   </div>
 </div>
 
@@ -34,7 +34,7 @@
       </div>
     </div>
   </div>
-  <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 shadow" style="heigth: 100%; width:100%;margin-top: 10px; border-radius: 15px; padding: 20px; margin-left: -10px" >
+  <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 shadow" style="heigth: 100%; width:100%;margin-top: 10px; border-radius: 15px; padding: 20px; margin-left: -10px; border: 1px solid rgba(0, 0, 0, 0.125);" >
       <div id="dataUserExport">
         <div class="container mb-5 mt-5">
           <!--div class="row mb-3" >
