--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
@@ -214,12 +214,12 @@
 <!-- Buscador -->
 <div class="text-center" style=" padding: 50px">
   <div class="row" style="display: block">
-    <h2 class="font-weight-bold text-center">Inconsistencia de Datos</h2>
+    <h3 class="font-weight-500 text-center">Mantenimiento Inconsistencia de Datos:</h3>
   </div>
   <div class="row" >
     <div class="col-3"></div>
     <div class="col-6">
-      <h3 class="font-weight-light text-center">{{util.userMntInconsistencia.email}}</h3>
+      <h3 class="font-weight-normal text-center">{{util.userMntInconsistencia.email}}</h3>
     </div>
     <div class="col-3">
         <div class="form-group row">
