--- a/src/app/Paginas/Body/backup/backup.component.html
+++ b/src/app/Paginas/Body/backup/backup.component.html
@@ -1,8 +1,8 @@
 
 <div class="tamaño-titulo-encabezado">
   <div class="tam-titulo-encabezado">
-    <h2 class="text-light">Detalles Respaldo # {{numBack}} Id_Backup {{idBack}}</h2>
-    <h4 class="text-light"><a [routerLink]="['/detalleUsuario']" class="text-light" style="text-decoration: none;">{{userService.User.email}}</a> </h4>
+    <h3 class="font-weight-normal text-light">Detalles Respaldo # {{numBack}} Id_Backup {{idBack}}</h3>
+    <h4 class="font-weight-light text-light"><a [routerLink]="['/detalleUsuario']" class="text-light" style="text-decoration: none;">{{userService.User.email}}</a> </h4>
   </div>
 </div>
 
