--- a/src/app/Paginas/Body/exportacion/exportacion.component.html
+++ b/src/app/Paginas/Body/exportacion/exportacion.component.html
@@ -36,8 +36,8 @@
                 </div>
                 <div class="form col checkRadioCenter">
                   <div class="custom-control custom-radio width-90">
-                    <input type="radio" class="custom-control-input" id="customControlValidation3" name="typeExport" [(ngModel)]="typeEXport" value="xls">
-                    <label class="custom-control-label" for="customControlValidation3">.Xls</label>
+                    <input type="radio" class="custom-control-input" id="customControlValidation3" name="typeExport" [(ngModel)]="typeEXport" value="xlsx">
+                    <label class="custom-control-label" for="customControlValidation3">.Xlsx</label>
                   </div>
                 </div>
               </div>
