--- a/src/app/Paginas/Body/usuarios/usuarios.component.html
+++ b/src/app/Paginas/Body/usuarios/usuarios.component.html
@@ -1,5 +1,6 @@
-<div class="tamaño-titulo-encabezado">
-  <div class="tam-titulo-encabezado">
-    <h2 class="text-light">Listado de usuarios</h2>
-  </div>
-</div>
+<app-titulo-encabezado titulo="Listado de usuarios"></app-titulo-encabezado>
+<button class="btn btn-outline-success rounded-circle addButton">
+  <span>
+    <fa-icon [icon]="util.faUserPlus"></fa-icon>
+  </span>
+</button>
