--- a/src/app/Paginas/Header/titulo-encabezado/titulo-encabezado.component.html
+++ b/src/app/Paginas/Header/titulo-encabezado/titulo-encabezado.component.html
@@ -1,5 +1,5 @@
 <div class="tamaño-titulo-encabezado">
   <div class="tam-titulo-encabezado">
-    <h2 class="text-light">{{titulo}}</h2>
+    <h3 class="text-light font-weight-normal">{{titulo}}</h3>
   </div>
 </div>
