--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~ng-pick-datetime/assets/style/picker.min.css";
-
+.dropdown-menu {
+  background-color: rgba(255, 255, 255, 0.86) !important;
+  transition: all 0.2s ease ;
+}
 .invalid-feedback {
   display: block !important;
   width: 100% !important;
@@ -262,6 +265,10 @@ app-gastos-entradas {
 .table-fixed tbody tr,
 .table-fixed-bu tbody tr {
   display: flex;
+}
+.table-fixed tbody tr,
+.table-fixed-bu tbody tr {
+  height: 75px;
 }
 
 .table-fixed thead tr th,
