--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <app-nav-encode></app-nav-encode>
-<router-outlet></router-outlet>
+<router-outlet (window:scroll)="onWindowScroll($event)"></router-outlet>
