--- a/src/styles.css
+++ b/src/styles.css
@@ -102,33 +102,61 @@
   border: 0px;
   color: white;
 }
+
+.inputSearch:hover {
+  border: 1px solid rgba(255, 255, 255, 0.16) !important;
+}
+.inputSearch:focus {
+  border: 1px solid rgba(255, 255, 255, 0.16) !important;
+}
+.inputSearch:after {
+  border: 1px solid rgba(255, 255, 255, 0.16) !important;
+}.inputSearch:before {
+  border: 1px solid rgba(255, 255, 255, 0.16) !important;
+}
 .btnSearch {
   width: 100%; height: 80px;
 }
 
 .tamaño-titulo-encabezado {
-width: 100%; height: 300px; background-color: rgba(82, 103, 124, 0.82);
+  width: 100%;
+  height: 300px;
+  /*background-color: rgba(82, 103, 124, 0.82);*/
+  background-image:url('./assets/img/background-lg.png');
 }
 .tam-titulo-encabezado {
 padding-top: 200px; text-align: center;
 }
 
 .btn-redondo {
-height: 100px !important;
-width: 100px !important;
-border-radius: 50%;
+  height: 100px !important;
+  width: 100px !important;
+  border-radius: 50%;
 }
 
 .navEncode {
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-height: 125px;
-padding: 30px 25px;
-/*background-color: #52677C;*/
-  background-color: rgba(82, 103, 124, 1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 130px;
+  padding: 30px 25px;
+  /*background-color: #52677C;
+    background-color: rgba(82, 103, 124, 1);*/
+  background-color: rgba(0, 19, 36, 0.9) !important;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
   z-index: 10;
+  transition: all 0.3s ease ;
+}
+
+.onScrollPage {
+  height: 100px !important;
+  background-color: rgba(0, 19, 36, 0.98) !important;
+}
+
+.noScrollPage {
+  height: 130px !important;
+  background-color: rgba(0, 19, 36, 0.9) !important;
 }
 
 .imgLogo {
