Avance listado usuarios Web App

--- a/src/app/Paginas/Body/home/home.component.html
+++ b/src/app/Paginas/Body/home/home.component.html
@@ -16,7 +16,7 @@
       <input formControlName="email" type="email"  name="correo" class="form-control-lg inputSearch" placeholder="Ingrese el correo del usuario" aria-label="Search">
     </div>
     <div class="col-1">
-      <button class="btn btn-lg btn-warning btnSearch shadow-sm" type="submit" [disabled]="usuarioSearch.invalid">
+      <button class="btn btn-lg btn-primary btnSearch shadow-sm" type="submit" [disabled]="usuarioSearch.invalid">
             <span class="tamaño-font">
               <fa-icon [icon]="util.faSearch"></fa-icon>
             </span>
