--- a/src/app/Paginas/Body/usuarios/permisos/permisos.component.html
+++ b/src/app/Paginas/Body/usuarios/permisos/permisos.component.html
@@ -1,2 +1,6 @@
 <app-titulo-encabezado titulo="Permisos"></app-titulo-encabezado>
-
+<button class="btn btn-outline-success rounded-circle addButton">
+  <span>
+    <fa-icon [icon]="util.faPlus" ></fa-icon>
+  </span>
+</button>
