--- a/src/app/Paginas/Header/nav-encode/nav-encode.component.html
+++ b/src/app/Paginas/Header/nav-encode/nav-encode.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-lg navEncode shadow" [ngClass]="util.onScroll ? 'onScrollPage': 'noScrollPage'">
+<nav class="navbar fixed-top navbar-expand-lg navEncode" [ngClass]="util.onScroll ? 'onScrollPage': 'noScrollPage'">
   <a class="navbar-brand" (click)="eventLogo()" *ngIf="userService.activo()" style="cursor: pointer;">
     <img src="../../../../assets/img/logo.png" class="imgLogo" >
   </a>
