--- a/src/styles.css
+++ b/src/styles.css
@@ -29,20 +29,33 @@
 }
 
 .addButton {
-  /*border: 0px;*/
+  background-color: #ffffff !important;
+  color: #000000 !important;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+  box-shadow: 3px 1px 3px rgba(0, 0, 0, 1);
   position: fixed !important;
   bottom: 20px !important;
   right: 20px !important;
-  width: 55px !important;
-  height: 55px !important;
+  width: 65px !important;
+  height: 65px !important;
   display: flex !important;
   justify-content: center !important;
   align-items: center !important;
-  /*color: #ffffff;*/
   cursor: pointer !important;
   /*background: #E45E4E;*/
   z-index: 100 !important;
 }
+.addButton:hover {
+  bottom: 15px !important;
+  right: 15px !important;
+  background-color: #00a927 !important;
+  color:  #ffffff !important;
+  font-size: 20px !important;
+  width: 75px !important;
+  height: 75px !important;
+}
+
 .backNavigation {
   /*border: 0px;*/
   position: fixed !important;
@@ -123,6 +136,7 @@
   height: 300px;
   /*background-color: rgba(82, 103, 124, 0.82);*/
   background-image:url('./assets/img/background-lg.png');
+  background-size: 100%;
 }
 .tam-titulo-encabezado {
 padding-top: 200px; text-align: center;
@@ -144,9 +158,9 @@ padding-top: 200px; text-align: center;
   /*background-color: #52677C;
     background-color: rgba(82, 103, 124, 1);*/
   background-color: rgba(0, 19, 36, 0.9) !important;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  box-shadow: 0px 4px 4px -4px #000000;
   z-index: 10;
-  transition: all 0.3s ease ;
+  transition: all 0.4s ease ;
 }
 
 .onScrollPage {
@@ -169,8 +183,9 @@ padding-top: 200px; text-align: center;
 }
 
 .Encabezado-Tabla {
+  font-weight: 500;
   font-size: 20px;
-  height: 110px;
+  height: 100%;
   color: #fff;
   background-color: #000000 !important;
   border-color: #454d55;
@@ -347,34 +362,34 @@ app-gastos-entradas {
 }
 .table-fixed-xl thead{
   width: 100%;
-  height: 120px !important;
+  height: 125px !important;
 }
 .table-fixed-xl thead tr {
-  height: 120px !important;
+  height: 125px !important;
 }
 @media screen and (max-width: 1920px) and (max-height: 1080px) {
   .table-fixed-xl {
-    height: 700px !important;
+    height: 725px !important;
     /*width: calc(1920px - 18px) !important;*/
   }
   .table-fixed-xl thead{
     /*width: calc(1920px - 18px) !important;*/
   }
   .table-fixed-xl tbody{
-    height: 550px !important;
+    height: 600px !important;
     /*width: calc(1920px - 18px) !important;*/
   }
 }
 @media screen and (max-width: 1366px) and (max-height: 768px) {
   .table-fixed-xl {
-    height: 500px !important;
+    height: 525px !important;
     /*width: calc(1366px - 18px) !important;*/
   }
   .table-fixed-xl thead tr{
     /*width: calc(1366px - 18px) !important;*/
   }
   .table-fixed-xl tbody{
-    height: 350px !important;
+    height: 400px !important;
     /*width: calc(1366px - 18px) !important;*/
   }
 }
